# lycheeos

./: .env  Makefile
.github/workflows/: build-iso.yml
ai/cde-ai-daemon/: ollama.service
ai/terminal-copilot/: copilot.sh
cde/compositor/: main.c
cde/theme/: theme.conf
iso/: build-iso.sh
kernel/: build.sh
kernel/config/: kernel.cmdline  x86_64.config
libc/glibc-compat/: glibc-run
multilang/: generate-locales.sh
security/apparmor.d/: cde-filemanager
security/sysctl.d/: 99-hardening.conf
system/boot-commit/: boot-commit.sh
system/updatd/: updatd.c
toolchain/: build-binutils.sh  build-gcc.sh  build-musl.sh
upm/: Cargo.toml
upm/src/: main.rs
upm/src/resolver/: pubgrub.rs
