[package]
name = "upm"
version = "0.1.0"
edition = "2021"
authors = ["Lychee OS Architect"]
description = "Universal Package Manager for Lychee OS"

[dependencies]
pubgrub = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
rusqlite = "0.31"
